--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,10 +8,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/*main {
-    min-width: 380px;
-}*/
-
 h1 {
     font-family: 'Shrikhand', cursive;
 }
