--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -52,6 +52,7 @@
             width: 100%;
             display: flex;
             flex-direction: column;
+            padding-bottom: 10px;
             position: relative;
             h3 {
                 width: 100%;
@@ -70,51 +71,59 @@
         .meal__section {
             display: flex;
             flex-direction: column;
-            gap: 50px;
-        }    
-    }      
-        .meal__card {
-            width: 350px;
-            height: 75px;
-            display: flex;
-            border-radius: $border-rad;
-            @include shadow-heavy;
-            //background-color: white;
-            overflow: hidden;
-            &--btn {
-                width: 100%;
-                height: 100%;
-                margin: 0px;
+            gap: 20px;
+            padding-bottom: 20px;
+            text-overflow: ellipsis;
+            .meal__card {
+                width: 350px;
+                height: 75px;
                 display: flex;
-                border: transparent;
-                cursor: pointer;
-                .meal__detail {
+                border-radius: $border-rad;
+                @include shadow-heavy;
+                //background-color: white;
+                overflow: hidden;
+                &--btn {
                     width: 100%;
-                    //height: 72px;
+                    height: 100%;
+                    margin: 0px;
                     display: flex;
-                    flex-direction: column;
-                    padding: 15px;
-                    gap: 5px;
-                    .meal__title {
+                    border: transparent;
+                    cursor: pointer;
+                    .meal__detail {
                         width: 100%;
-                        text-align: left;
+                        //height: 72px;
                         display: flex;
-                    }
-                    .meal__subtitle {
-                        width: 100%;
-                        height: 30px;
-                        display: flex;
-                        .meal__side {
+                        flex-direction: column;
+                        padding: 15px;
+                        gap: 5px;
+                        .meal__title {
                             width: 100%;
                             text-align: left;
+                            display: flex;
                         }
-                        .meal__price {
-                            width: 30px;
-                            text-align: right;
-                            font-weight: bold;
+                        .meal__subtitle {
+                            width: 100%;
+                            height: 30px;
+                            display: flex;
+                            .meal__side {
+                                width: 100%;
+                                text-align: left; 
+                                text-overflow: ellipsis; 
+                            }
+                            .meal__price {
+                                width: 30px;
+                                text-align: right;
+                                font-weight: bold;
+                            }
                         }
                     }
                 }
             }
-        } 
+        @media screen and (min-width: 768px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+            }     
+        }    
+    }      
 }
